kubernetes/users-api.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "users-api"
  namespace: "default"
  labels:
    app: "users-api"
spec: 
  replicas: 3
  selector:
    matchLabels:
      app: "users-api"
  template:
    metadata:
      labels:
        app: "users-api"
    spec:
      containers:
      - name: "users-api"
        image: "europe-west4-docker.pkg.dev/influential-rex-351509/audiopage-repo/users-api:d280698c6bdbb22c1672b016314e538cb067cd0e"
        ports: 
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: users-api-service
spec:
  selector:
    app: users-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
